exports[`no-negated-array-predicate > invalid(1): !array.some(element => test(element)); 1`] = `

  1 | !array.some(element => test(element));

`;

exports[`no-negated-array-predicate > invalid(1): !array.some(element => test(element)); 2`] = `

Message:
> 1 | !array.some(element => test(element));
    |        ^^^^ Prefer \`Array#every()\` with a negated predicate over negating \`Array#some()\`.

Output:
  1 | array.every(element => !test(element));

`;

exports[`no-negated-array-predicate > invalid(10): !array.some(element => element.foo ? element.bar : element.baz); 1`] = `

  1 | !array.some(element => element.foo ? element.bar : element.baz);

`;

exports[`no-negated-array-predicate > invalid(10): !array.some(element => element.foo ? element.bar : element.baz); 2`] = `

Message:
> 1 | !array.some(element => element.foo ? element.bar : element.baz);
    |        ^^^^ Prefer \`Array#every()\` with a negated predicate over negating \`Array#some()\`.

Output:
  1 | array.every(element => !(element.foo ? element.bar : element.baz));

`;

exports[`no-negated-array-predicate > invalid(11): !array.some(element => /* before */ test(element)); 1`] = `

  1 | !array.some(element => /* before */ test(element));

`;

exports[`no-negated-array-predicate > invalid(11): !array.some(element => /* before */ test(element)); 2`] = `

Message:
> 1 | !array.some(element => /* before */ test(element));
    |        ^^^^ Prefer \`Array#every()\` with a negated predicate over negating \`Array#some()\`.

Output:
  1 | array.every(element => /* before */ !test(element));

`;

exports[`no-negated-array-predicate > invalid(12): !array.some(element => test(element) /* after */); 1`] = `

  1 | !array.some(element => test(element) /* after */);

`;

exports[`no-negated-array-predicate > invalid(12): !array.some(element => test(element) /* after */); 2`] = `

Message:
> 1 | !array.some(element => test(element) /* after */);
    |        ^^^^ Prefer \`Array#every()\` with a negated predicate over negating \`Array#some()\`.

Output:
  1 | array.every(element => !test(element) /* after */);

`;

exports[`no-negated-array-predicate > invalid(13): !array.some(element => { return test(element); }); 1`] = `

  1 | !array.some(element => { return test(element); });

`;

exports[`no-negated-array-predicate > invalid(13): !array.some(element => { return test(element); }); 2`] = `

Message:
> 1 | !array.some(element => { return test(element); });
    |        ^^^^ Prefer \`Array#every()\` with a negated predicate over negating \`Array#some()\`.

Output:
  1 | array.every(element => { return !test(element); });

`;

exports[`no-negated-array-predicate > invalid(14): !array.some(element => { return !({}); }); 1`] = `

  1 | !array.some(element => { return !({}); });

`;

exports[`no-negated-array-predicate > invalid(14): !array.some(element => { return !({}); }); 2`] = `

Message:
> 1 | !array.some(element => { return !({}); });
    |        ^^^^ Prefer \`Array#every()\` with a negated predicate over negating \`Array#some()\`.

Output:
  1 | array.every(element => { return {}; });

`;

exports[`no-negated-array-predicate > invalid(15): !array.every(function (element) { return test(element); }); 1`] = `

  1 | !array.every(function (element) { return test(element); });

`;

exports[`no-negated-array-predicate > invalid(15): !array.every(function (element) { return test(element); }); 2`] = `

Message:
> 1 | !array.every(function (element) { return test(element); });
    |        ^^^^^ Prefer \`Array#some()\` with a negated predicate over negating \`Array#every()\`.

Output:
  1 | array.some(function (element) { return !test(element); });

`;

exports[`no-negated-array-predicate > invalid(16): !array.some(function (element) { return !test(element); }, thisArgument); 1`] = `

  1 | !array.some(function (element) { return !test(element); }, thisArgument);

`;

exports[`no-negated-array-predicate > invalid(16): !array.some(function (element) { return !test(element); }, thisArgument); 2`] = `

Message:
> 1 | !array.some(function (element) { return !test(element); }, thisArgument);
    |        ^^^^ Prefer \`Array#every()\` with a negated predicate over negating \`Array#some()\`.

Output:
  1 | array.every(function (element) { return test(element); }, thisArgument);

`;

exports[`no-negated-array-predicate > invalid(17): if (!array.some(element => test(element))) {} 1`] = `

  1 | if (!array.some(element => test(element))) {}

`;

exports[`no-negated-array-predicate > invalid(17): if (!array.some(element => test(element))) {} 2`] = `

Message:
> 1 | if (!array.some(element => test(element))) {}
    |            ^^^^ Prefer \`Array#every()\` with a negated predicate over negating \`Array#some()\`.

Output:
  1 | if (array.every(element => !test(element))) {}

`;

exports[`no-negated-array-predicate > invalid(18): const isMissing = !array.some(element => test(element)); 1`] = `

  1 | const isMissing = !array.some(element => test(element));

`;

exports[`no-negated-array-predicate > invalid(18): const isMissing = !array.some(element => test(element)); 2`] = `

Message:
> 1 | const isMissing = !array.some(element => test(element));
    |                          ^^^^ Prefer \`Array#every()\` with a negated predicate over negating \`Array#some()\`.

Output:
  1 | const isMissing = array.every(element => !test(element));

`;

exports[`no-negated-array-predicate > invalid(19): Boolean(!array.every(element => test(element))); 1`] = `

  1 | Boolean(!array.every(element => test(element)));

`;

exports[`no-negated-array-predicate > invalid(19): Boolean(!array.every(element => test(element))); 2`] = `

Message:
> 1 | Boolean(!array.every(element => test(element)));
    |                ^^^^^ Prefer \`Array#some()\` with a negated predicate over negating \`Array#every()\`.

Output:
  1 | Boolean(array.some(element => !test(element)));

`;

exports[`no-negated-array-predicate > invalid(2): !array.every(element => test(element)); 1`] = `

  1 | !array.every(element => test(element));

`;

exports[`no-negated-array-predicate > invalid(2): !array.every(element => test(element)); 2`] = `

Message:
> 1 | !array.every(element => test(element));
    |        ^^^^^ Prefer \`Array#some()\` with a negated predicate over negating \`Array#every()\`.

Output:
  1 | array.some(element => !test(element));

`;

exports[`no-negated-array-predicate > invalid(20): foo(!array.some(element => test(element))); 1`] = `

  1 | foo(!array.some(element => test(element)));

`;

exports[`no-negated-array-predicate > invalid(20): foo(!array.some(element => test(element))); 2`] = `

Message:
> 1 | foo(!array.some(element => test(element)));
    |            ^^^^ Prefer \`Array#every()\` with a negated predicate over negating \`Array#some()\`.

Output:
  1 | foo(array.every(element => !test(element)));

`;

exports[`no-negated-array-predicate > invalid(21): !((array.some(element => test(element)))); 1`] = `

  1 | !((array.some(element => test(element))));

`;

exports[`no-negated-array-predicate > invalid(21): !((array.some(element => test(element)))); 2`] = `

Message:
> 1 | !((array.some(element => test(element))));
    |          ^^^^ Prefer \`Array#every()\` with a negated predicate over negating \`Array#some()\`.

Output:
  1 | ((array.every(element => !test(element))));

`;

exports[`no-negated-array-predicate > invalid(22): foo\n!array.some(element => test(element)) 1`] = `

  1 | foo
  2 | !array.some(element => test(element))

`;

exports[`no-negated-array-predicate > invalid(22): foo\n!array.some(element => test(element)) 2`] = `

Message:
  1 | foo
> 2 | !array.some(element => test(element))
    |        ^^^^ Prefer \`Array#every()\` with a negated predicate over negating \`Array#some()\`.

Output:
  1 | foo
  2 | array.every(element => !test(element))

`;

exports[`no-negated-array-predicate > invalid(23): foo()\n![].some(element => test(element)) 1`] = `

  1 | foo()
  2 | ![].some(element => test(element))

`;

exports[`no-negated-array-predicate > invalid(23): foo()\n![].some(element => test(element)) 2`] = `

Message:
  1 | foo()
> 2 | ![].some(element => test(element))
    |     ^^^^ Prefer \`Array#every()\` with a negated predicate over negating \`Array#some()\`.

Output:
  1 | foo()
  2 | ;[].every(element => !test(element))

`;

exports[`no-negated-array-predicate > invalid(24): function foo() {\n\treturn!array.some(element => test(element));\n} 1`] = `

  1 | function foo() {
  2 | 	return!array.some(element => test(element));
  3 | }

`;

exports[`no-negated-array-predicate > invalid(24): function foo() {\n\treturn!array.some(element => test(element));\n} 2`] = `

Message:
  1 | function foo() {
> 2 | 	return!array.some(element => test(element));
    | 	             ^^^^ Prefer \`Array#every()\` with a negated predicate over negating \`Array#some()\`.
  3 | }

Output:
  1 | function foo() {
  2 | 	return array.every(element => !test(element));
  3 | }

`;

exports[`no-negated-array-predicate > invalid(25): function foo() {\n\treturn!\n\t\tarray.some(element => test(element));\n} 1`] = `

  1 | function foo() {
  2 | 	return!
  3 | 		array.some(element => test(element));
  4 | }

`;

exports[`no-negated-array-predicate > invalid(25): function foo() {\n\treturn!\n\t\tarray.some(element => test(element));\n} 2`] = `

Message:
  1 | function foo() {
  2 | 	return!
> 3 | 		array.some(element => test(element));
    | 		      ^^^^ Prefer \`Array#every()\` with a negated predicate over negating \`Array#some()\`.
  4 | }

Output:
  1 | function foo() {
  2 | 	return (
  3 | 		array.every(element => !test(element)));
  4 | }

`;

exports[`no-negated-array-predicate > invalid(26): function foo() {\n\tthrow!array.some(element => test(element));\n} 1`] = `

  1 | function foo() {
  2 | 	throw!array.some(element => test(element));
  3 | }

`;

exports[`no-negated-array-predicate > invalid(26): function foo() {\n\tthrow!array.some(element => test(element));\n} 2`] = `

Message:
  1 | function foo() {
> 2 | 	throw!array.some(element => test(element));
    | 	            ^^^^ Prefer \`Array#every()\` with a negated predicate over negating \`Array#some()\`.
  3 | }

Output:
  1 | function foo() {
  2 | 	throw array.every(element => !test(element));
  3 | }

`;

exports[`no-negated-array-predicate > invalid(27): function foo() {\n\tthrow!\n\t\tarray.some(element => test(element));\n} 1`] = `

  1 | function foo() {
  2 | 	throw!
  3 | 		array.some(element => test(element));
  4 | }

`;

exports[`no-negated-array-predicate > invalid(27): function foo() {\n\tthrow!\n\t\tarray.some(element => test(element));\n} 2`] = `

Message:
  1 | function foo() {
  2 | 	throw!
> 3 | 		array.some(element => test(element));
    | 		      ^^^^ Prefer \`Array#every()\` with a negated predicate over negating \`Array#some()\`.
  4 | }

Output:
  1 | function foo() {
  2 | 	throw (
  3 | 		array.every(element => !test(element)));
  4 | }

`;

exports[`no-negated-array-predicate > invalid(28): !array.some(element => element!.enabled); 1`] = `

  1 | !array.some(element => element!.enabled);

`;

exports[`no-negated-array-predicate > invalid(28): !array.some(element => element!.enabled); 2`] = `

Message:
> 1 | !array.some(element => element!.enabled);
    |        ^^^^ Prefer \`Array#every()\` with a negated predicate over negating \`Array#some()\`.

Output:
  1 | array.every(element => !element!.enabled);

`;

exports[`no-negated-array-predicate > invalid(29): !array.some(element => (element as Item).enabled); 1`] = `

  1 | !array.some(element => (element as Item).enabled);

`;

exports[`no-negated-array-predicate > invalid(29): !array.some(element => (element as Item).enabled); 2`] = `

Message:
> 1 | !array.some(element => (element as Item).enabled);
    |        ^^^^ Prefer \`Array#every()\` with a negated predicate over negating \`Array#some()\`.

Output:
  1 | array.every(element => !(element as Item).enabled);

`;

exports[`no-negated-array-predicate > invalid(3): !array.some(element => !test(element)); 1`] = `

  1 | !array.some(element => !test(element));

`;

exports[`no-negated-array-predicate > invalid(3): !array.some(element => !test(element)); 2`] = `

Message:
> 1 | !array.some(element => !test(element));
    |        ^^^^ Prefer \`Array#every()\` with a negated predicate over negating \`Array#some()\`.

Output:
  1 | array.every(element => test(element));

`;

exports[`no-negated-array-predicate > invalid(30): !array.some(element => (element satisfies Item).enabled); 1`] = `

  1 | !array.some(element => (element satisfies Item).enabled);

`;

exports[`no-negated-array-predicate > invalid(30): !array.some(element => (element satisfies Item).enabled); 2`] = `

Message:
> 1 | !array.some(element => (element satisfies Item).enabled);
    |        ^^^^ Prefer \`Array#every()\` with a negated predicate over negating \`Array#some()\`.

Output:
  1 | array.every(element => !(element satisfies Item).enabled);

`;

exports[`no-negated-array-predicate > invalid(31): !array.some(element => element as unknown); 1`] = `

  1 | !array.some(element => element as unknown);

`;

exports[`no-negated-array-predicate > invalid(31): !array.some(element => element as unknown); 2`] = `

Message:
> 1 | !array.some(element => element as unknown);
    |        ^^^^ Prefer \`Array#every()\` with a negated predicate over negating \`Array#some()\`.

Output:
  1 | array.every(element => !(element as unknown));

`;

exports[`no-negated-array-predicate > invalid(32): !array.some(element => element satisfies unknown); 1`] = `

  1 | !array.some(element => element satisfies unknown);

`;

exports[`no-negated-array-predicate > invalid(32): !array.some(element => element satisfies unknown); 2`] = `

Message:
> 1 | !array.some(element => element satisfies unknown);
    |        ^^^^ Prefer \`Array#every()\` with a negated predicate over negating \`Array#some()\`.

Output:
  1 | array.every(element => !(element satisfies unknown));

`;

exports[`no-negated-array-predicate > invalid(33): <template><div v-if=\"!array.some(element => test(element))\"></div></template> 1`] = `

  1 | <template><div v-if="!array.some(element => test(element))"></div></template>

`;

exports[`no-negated-array-predicate > invalid(33): <template><div v-if=\"!array.some(element => test(element))\"></div></template> 2`] = `

Message:
> 1 | <template><div v-if="!array.some(element => test(element))"></div></template>
    |                             ^^^^ Prefer \`Array#every()\` with a negated predicate over negating \`Array#some()\`.

Output:
  1 | <template><div v-if="array.every(element => !test(element))"></div></template>

`;

exports[`no-negated-array-predicate > invalid(34): <template><div v-if=\"![].some(element => test(element))\"></div></template> 1`] = `

  1 | <template><div v-if="![].some(element => test(element))"></div></template>

`;

exports[`no-negated-array-predicate > invalid(34): <template><div v-if=\"![].some(element => test(element))\"></div></template> 2`] = `

Message:
> 1 | <template><div v-if="![].some(element => test(element))"></div></template>
    |                          ^^^^ Prefer \`Array#every()\` with a negated predicate over negating \`Array#some()\`.

Output:
  1 | <template><div v-if="[].every(element => !test(element))"></div></template>

`;

exports[`no-negated-array-predicate > invalid(35): <template><div v-if=\"!(array.some(element => test(element)))\"></div></template> 1`] = `

  1 | <template><div v-if="!(array.some(element => test(element)))"></div></template>

`;

exports[`no-negated-array-predicate > invalid(35): <template><div v-if=\"!(array.some(element => test(element)))\"></div></template> 2`] = `

Message:
> 1 | <template><div v-if="!(array.some(element => test(element)))"></div></template>
    |                              ^^^^ Prefer \`Array#every()\` with a negated predicate over negating \`Array#some()\`.

Output:
  1 | <template><div v-if="(array.every(element => !test(element)))"></div></template>

`;

exports[`no-negated-array-predicate > invalid(36): function f(array: Int8Array) { return !array.some(element => test(element)); } 1`] = `

  1 | function f(array: Int8Array) { return !array.some(element => test(element)); }

`;

exports[`no-negated-array-predicate > invalid(36): function f(array: Int8Array) { return !array.some(element => test(element)); } 2`] = `

Message:
> 1 | function f(array: Int8Array) { return !array.some(element => test(element)); }
    |                                              ^^^^ Prefer \`Array#every()\` with a negated predicate over negating \`Array#some()\`.

Output:
  1 | function f(array: Int8Array) { return array.every(element => !test(element)); }

`;

exports[`no-negated-array-predicate > invalid(37): !array.some(element => !{foo: element}.foo); 1`] = `

  1 | !array.some(element => !{foo: element}.foo);

`;

exports[`no-negated-array-predicate > invalid(37): !array.some(element => !{foo: element}.foo); 2`] = `

Message:
> 1 | !array.some(element => !{foo: element}.foo);
    |        ^^^^ Prefer \`Array#every()\` with a negated predicate over negating \`Array#some()\`.

Output:
  1 | array.every(element => ({foo: element}.foo));

`;

exports[`no-negated-array-predicate > invalid(38): <template><div v-if=\"!array.some(element => (test(element)))\"></div></template> 1`] = `

  1 | <template><div v-if="!array.some(element => (test(element)))"></div></template>

`;

exports[`no-negated-array-predicate > invalid(38): <template><div v-if=\"!array.some(element => (test(element)))\"></div></template> 2`] = `

Message:
> 1 | <template><div v-if="!array.some(element => (test(element)))"></div></template>
    |                             ^^^^ Prefer \`Array#every()\` with a negated predicate over negating \`Array#some()\`.

Output:
  1 | <template><div v-if="array.every(element => !test(element))"></div></template>

`;

exports[`no-negated-array-predicate > invalid(39): !array.some(element => test(/* comment */ element)); 1`] = `

  1 | !array.some(element => test(/* comment */ element));

`;

exports[`no-negated-array-predicate > invalid(39): !array.some(element => test(/* comment */ element)); 2`] = `

Message:
> 1 | !array.some(element => test(/* comment */ element));
    |        ^^^^ Prefer \`Array#every()\` with a negated predicate over negating \`Array#some()\`.

`;

exports[`no-negated-array-predicate > invalid(4): !array.every(element => !test(element)); 1`] = `

  1 | !array.every(element => !test(element));

`;

exports[`no-negated-array-predicate > invalid(4): !array.every(element => !test(element)); 2`] = `

Message:
> 1 | !array.every(element => !test(element));
    |        ^^^^^ Prefer \`Array#some()\` with a negated predicate over negating \`Array#every()\`.

Output:
  1 | array.some(element => test(element));

`;

exports[`no-negated-array-predicate > invalid(40): ! /* comment */ array.some(element => test(element)); 1`] = `

  1 | ! /* comment */ array.some(element => test(element));

`;

exports[`no-negated-array-predicate > invalid(40): ! /* comment */ array.some(element => test(element)); 2`] = `

Message:
> 1 | ! /* comment */ array.some(element => test(element));
    |                       ^^^^ Prefer \`Array#every()\` with a negated predicate over negating \`Array#some()\`.

`;

exports[`no-negated-array-predicate > invalid(41): <template>{{ ! /* comment */ array.some(element => test(element)) }}</template> 1`] = `

  1 | <template>{{ ! /* comment */ array.some(element => test(element)) }}</template>

`;

exports[`no-negated-array-predicate > invalid(41): <template>{{ ! /* comment */ array.some(element => test(element)) }}</template> 2`] = `

Message:
> 1 | <template>{{ ! /* comment */ array.some(element => test(element)) }}</template>
    |                                    ^^^^ Prefer \`Array#every()\` with a negated predicate over negating \`Array#some()\`.

`;

exports[`no-negated-array-predicate > invalid(42): <template><div :class=\"!array.some(element => !/* comment */element)\" /></template> 1`] = `

  1 | <template><div :class="!array.some(element => !/* comment */element)" /></template>

`;

exports[`no-negated-array-predicate > invalid(42): <template><div :class=\"!array.some(element => !/* comment */element)\" /></template> 2`] = `

Message:
> 1 | <template><div :class="!array.some(element => !/* comment */element)" /></template>
    |                               ^^^^ Prefer \`Array#every()\` with a negated predicate over negating \`Array#some()\`.

`;

exports[`no-negated-array-predicate > invalid(43): <template>{{ !array.every(element => test(/* comment */ element)) }}</template> 1`] = `

  1 | <template>{{ !array.every(element => test(/* comment */ element)) }}</template>

`;

exports[`no-negated-array-predicate > invalid(43): <template>{{ !array.every(element => test(/* comment */ element)) }}</template> 2`] = `

Message:
> 1 | <template>{{ !array.every(element => test(/* comment */ element)) }}</template>
    |                     ^^^^^ Prefer \`Array#some()\` with a negated predicate over negating \`Array#every()\`.

`;

exports[`no-negated-array-predicate > invalid(44): <template>{{ !array.every(element => (/* keep */ element)) }}</template> 1`] = `

  1 | <template>{{ !array.every(element => (/* keep */ element)) }}</template>

`;

exports[`no-negated-array-predicate > invalid(44): <template>{{ !array.every(element => (/* keep */ element)) }}</template> 2`] = `

Message:
> 1 | <template>{{ !array.every(element => (/* keep */ element)) }}</template>
    |                     ^^^^^ Prefer \`Array#some()\` with a negated predicate over negating \`Array#every()\`.

`;

exports[`no-negated-array-predicate > invalid(45): <template>{{ !array.some(element => (((element /* keep */)))) }}</template> 1`] = `

  1 | <template>{{ !array.some(element => (((element /* keep */)))) }}</template>

`;

exports[`no-negated-array-predicate > invalid(45): <template>{{ !array.some(element => (((element /* keep */)))) }}</template> 2`] = `

Message:
> 1 | <template>{{ !array.some(element => (((element /* keep */)))) }}</template>
    |                     ^^^^ Prefer \`Array#every()\` with a negated predicate over negating \`Array#some()\`.

`;

exports[`no-negated-array-predicate > invalid(46): !array.every(element => ((/* before */ element /* after */))); 1`] = `

  1 | !array.every(element => ((/* before */ element /* after */)));

`;

exports[`no-negated-array-predicate > invalid(46): !array.every(element => ((/* before */ element /* after */))); 2`] = `

Message:
> 1 | !array.every(element => ((/* before */ element /* after */)));
    |        ^^^^^ Prefer \`Array#some()\` with a negated predicate over negating \`Array#every()\`.

Output:
  1 | array.some(element => !((/* before */ element /* after */)));

`;

exports[`no-negated-array-predicate > invalid(47): <template>{{ !array.every(element => /* before */ (element) /* after */) }}</template> 1`] = `

  1 | <template>{{ !array.every(element => /* before */ (element) /* after */) }}</template>

`;

exports[`no-negated-array-predicate > invalid(47): <template>{{ !array.every(element => /* before */ (element) /* after */) }}</template> 2`] = `

Message:
> 1 | <template>{{ !array.every(element => /* before */ (element) /* after */) }}</template>
    |                     ^^^^^ Prefer \`Array#some()\` with a negated predicate over negating \`Array#every()\`.

Output:
  1 | <template>{{ array.some(element => /* before */ !element /* after */) }}</template>

`;

exports[`no-negated-array-predicate > invalid(48): <template>{{ !array.some(element => { /* keep */ return test(element); }) }}</template> 1`] = `

  1 | <template>{{ !array.some(element => { /* keep */ return test(element); }) }}</template>

`;

exports[`no-negated-array-predicate > invalid(48): <template>{{ !array.some(element => { /* keep */ return test(element); }) }}</template> 2`] = `

Message:
> 1 | <template>{{ !array.some(element => { /* keep */ return test(element); }) }}</template>
    |                     ^^^^ Prefer \`Array#every()\` with a negated predicate over negating \`Array#some()\`.

Output:
  1 | <template>{{ array.every(element => { /* keep */ return !test(element); }) }}</template>

`;

exports[`no-negated-array-predicate > invalid(49): <template>{{ !array.some(element => { return test(/* keep */ element); }) }}</template> 1`] = `

  1 | <template>{{ !array.some(element => { return test(/* keep */ element); }) }}</template>

`;

exports[`no-negated-array-predicate > invalid(49): <template>{{ !array.some(element => { return test(/* keep */ element); }) }}</template> 2`] = `

Message:
> 1 | <template>{{ !array.some(element => { return test(/* keep */ element); }) }}</template>
    |                     ^^^^ Prefer \`Array#every()\` with a negated predicate over negating \`Array#some()\`.

`;

exports[`no-negated-array-predicate > invalid(5): !array.some(element => !({})); 1`] = `

  1 | !array.some(element => !({}));

`;

exports[`no-negated-array-predicate > invalid(5): !array.some(element => !({})); 2`] = `

Message:
> 1 | !array.some(element => !({}));
    |        ^^^^ Prefer \`Array#every()\` with a negated predicate over negating \`Array#some()\`.

Output:
  1 | array.every(element => ({}));

`;

exports[`no-negated-array-predicate > invalid(6): !array.some(element => !((foo, bar))); 1`] = `

  1 | !array.some(element => !((foo, bar)));

`;

exports[`no-negated-array-predicate > invalid(6): !array.some(element => !((foo, bar))); 2`] = `

Message:
> 1 | !array.some(element => !((foo, bar)));
    |        ^^^^ Prefer \`Array#every()\` with a negated predicate over negating \`Array#some()\`.

Output:
  1 | array.every(element => (foo, bar));

`;

exports[`no-negated-array-predicate > invalid(7): !array.some((element) => (test(element))); 1`] = `

  1 | !array.some((element) => (test(element)));

`;

exports[`no-negated-array-predicate > invalid(7): !array.some((element) => (test(element))); 2`] = `

Message:
> 1 | !array.some((element) => (test(element)));
    |        ^^^^ Prefer \`Array#every()\` with a negated predicate over negating \`Array#some()\`.

Output:
  1 | array.every((element) => !test(element));

`;

exports[`no-negated-array-predicate > invalid(8): !array.some(element => ({})); 1`] = `

  1 | !array.some(element => ({}));

`;

exports[`no-negated-array-predicate > invalid(8): !array.some(element => ({})); 2`] = `

Message:
> 1 | !array.some(element => ({}));
    |        ^^^^ Prefer \`Array#every()\` with a negated predicate over negating \`Array#some()\`.

Output:
  1 | array.every(element => !{});

`;

exports[`no-negated-array-predicate > invalid(9): !array.some(element => element.foo && element.bar); 1`] = `

  1 | !array.some(element => element.foo && element.bar);

`;

exports[`no-negated-array-predicate > invalid(9): !array.some(element => element.foo && element.bar); 2`] = `

Message:
> 1 | !array.some(element => element.foo && element.bar);
    |        ^^^^ Prefer \`Array#every()\` with a negated predicate over negating \`Array#some()\`.

Output:
  1 | array.every(element => !(element.foo && element.bar));

`;
